# numtypesx

./: README.md  meson.build  pyproject.toml  setup.py
.github/workflows/: tests.yml
numtypesx/: __init__.py
numtypesx/tests/: test_comparison.py  test_copy.py  test_logfloat_scalars.py  test_logfloat_ufuncs.py  test_nint_python_scalar.py
src/: logfloat_casts.c.src  logfloat_dtype.h  logfloat_umath.c.src  logfloat_umath.h  meson.build  numtypesx_module.c
src/logfloat/: logfloat_casts.c.jinja  logfloat_casts.c.src  logfloat_casts.h  logfloat_dtype.c.jinja  logfloat_dtype.c.src  logfloat_module.c  logfloat_scalar.c.jinja  logfloat_scalar.c.src  logfloat_scalar.h  logfloat_umath.c.jinja  logfloat_umath.c.src  meson.build
src/nint/: common.jinja  meson.build  nint_python_scalars.c.jinja  nint_python_scalars.h.jinja
tools/: process_jinja.py
