[build-system]
requires = [
    "meson>=0.64.0",
    "meson-python>=0.14.0",
    "wheel",
    'toml',
    "numpy",
]
build-backend = "mesonpy"

[project]
name = "numtypesx"
description = "Custom data types for NumPy using the new DType system"
version = "0.0.2dev0"
readme = 'README.md'
author = "Warren Weckesser"
requires-python = ">=3.9.0"
dependencies = [
    "numpy",
    "pytest"
]
